--- a/scss/elements/_illustrations.scss
+++ b/scss/elements/_illustrations.scss
@@ -69,8 +69,12 @@
       width: 100%;
       left: 0;
       right: auto;
-      top: -100px;
-      margin-bottom: -150px;
+      // top: -100px;
+      // margin-bottom: -150px;
+
+      top: -30px;
+      margin-bottom: -130px;
+      padding-bottom: 50px;
     }
     // &.illustration-bottom {
     //   position: absolute;
