--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -172,7 +172,7 @@
   }
   .primarynav {
     display: block;
-    float: left;
+    margin-right: auto;
     ul {
       list-style: none;
       margin: 0;
