updated the margin on primary cta

--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -205,8 +205,7 @@
   .primary-cta {
     display: inline-block;
     padding: 8px 20px;
-    margin: auto;
-    margin-right: 0;
+    margin: auto 0;
     line-height: 1;
     background-color: $lime;
     color: #fff;
