--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,6 +41,7 @@
 @import "views/services";
 @import "views/about";
 @import "views/volunteer";
+@import "views/recruitment";
 
 
 // TODO - Refactor these styles into partials
