--- a/scss/wufoo.scss
+++ b/scss/wufoo.scss
@@ -226,6 +226,8 @@ html{
       }
       &.buttons {
         background: transparent;
+        padding: 0;
+        text-align: center;
       }
     }
   }
