--- a/scss/wufoo.scss
+++ b/scss/wufoo.scss
@@ -183,10 +183,11 @@ html{
   &.wufoo {
     box-sizing: border-box;
     li {
-      background-color: #fff;
-      margin: 20px 0;
+      background-color: transparent;
+      margin: 10px 0;
       width: 100%;
       input {
+        padding: 20px 15px;
         &.btTxt {
           background-color: #5a2747;
         }
@@ -217,7 +218,8 @@ html{
         box-sizing: border-box;
         input {
           width: 49%;
-          padding: 10px 0;
+          padding: 15px 10px;
+          box-sizing: border-box;
         }
         .instruct {
           left: 50%;
