--- a/scss/wufoo.scss
+++ b/scss/wufoo.scss
@@ -182,7 +182,7 @@ html{
       &.btTxt {
         background-color: $lime;
         &:hover {
-          background-color: $teal;
+          background-color: $plum;
         }
       }
     }
