--- a/scss/views/_services.scss
+++ b/scss/views/_services.scss
@@ -22,6 +22,12 @@
   }
 }
 
+#get-started-services {
+  iframe {
+    // min-height: 740px;
+  }
+}
+
 // Media Queries
 @media(max-width: $screen-lg-max) {
 
@@ -32,7 +38,11 @@
 }
 
 @media(max-width: $screen-sm-max) {
-
+  #get-started-services {
+    iframe {
+      min-height: 740px;
+    }
+  }
 }
 
 @media(max-width: $screen-xs-max) {
