updated form input widths on the purchase subtitles inquiry

--- a/scss/wufoo.scss
+++ b/scss/wufoo.scss
@@ -317,7 +317,7 @@ html{
           }
         }
         &.leftHalf, &.rightHalf {
-          width: 100% !important;
+          width: auto !important;
           float: none;
         }
       }
