updated sandbox for testing wufoo styles

--- a/scss/wufoo.scss
+++ b/scss/wufoo.scss
@@ -31,6 +31,14 @@ html{
 .wufoo {
   font-family: $headings-font-family;
   box-sizing: border-box;
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    li {
+
+    }
+  }
   input.text, textarea.textarea{
     background: transparent;
   }
