--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -24,6 +24,26 @@ textarea {
   }
 }
 
+// Placeholders
+::-webkit-input-placeholder { /* WebKit browsers */
+  color: #000;
+  font-weight: 200;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #000;
+   opacity:  1;
+   font-weight: 200;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #000;
+   opacity:  1;
+   font-weight: 200;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+   color:    #000;
+   font-weight: 200;
+}
+
 
 // Media Queries
 @media(max-width: $screen-md-max) {
