--- a/scss/wufoo.scss
+++ b/scss/wufoo.scss
@@ -2,6 +2,7 @@
 @import "mixins";
 @import "base/global";
 @import "base/typography";
+@import "elements/forms";
 
 
 // Logos
@@ -83,7 +84,7 @@ html{
     color: $gray-darker;
     background-color: #ffffff;
     width: 100%;
-    font-weight: 400;
+    font-weight: 700;
     font-family: $headings-font-family;
     box-sizing: border-box;
   }
