--- a/scss/application.scss
+++ b/scss/application.scss
@@ -1,7 +1,7 @@
 // Utils
-@import 'application/variables';
-@import 'application/mixins';
-@import 'application/utils';
+@import 'variables';
+@import 'mixins';
+@import 'utilities';
 
 // Global
 @import 'application/global/base';
