--- a/scss/application/elements/_dialogs.scss
+++ b/scss/application/elements/_dialogs.scss
@@ -274,7 +274,7 @@
     font-weight: 500;
     line-height: 1.0;
     margin-bottom: 5px;
-    color: $gray-base;
+    color: $gray-darker;
   }
   .dialogSubTitle {
     font-family: $font-family-sans-serif;
