--- a/scss/application/elements/_page_footer.scss
+++ b/scss/application/elements/_page_footer.scss
@@ -9,10 +9,10 @@
 }
 .footerNav {
   a {
-    color: $lime-green;
+    color: $lime;
     padding: 5px 15px;
     &:hover {
-      color: $gray-base;
+      color: $gray-darker;
     }
   }
 }
