--- a/scss/application/elements/_searchbar.scss
+++ b/scss/application/elements/_searchbar.scss
@@ -14,7 +14,7 @@
     content: "\e905";
     display: block;
     position: absolute;
-    right: $base-line-height/2;
+    right: 16px;
     top: 0;
     font-family: 'amara' !important;
     speak: none;
