--- a/scss/application/elements/_video_card.scss
+++ b/scss/application/elements/_video_card.scss
@@ -110,7 +110,7 @@
   height: 31px;
   line-height: 31px;
   padding: 0 10px;
-  background-color: $magenta;
+  background-color: $amaranth;
   border-radius: $border-radius-base 0 0 0;
   i {
     width: 30px;
@@ -153,7 +153,7 @@
   margin: 10px;
   overflow: hidden;
   box-sizing: border-box;
-  background-color: $gray-base;
+  background-color: $gray-darker;
   color: #ffffff;
   text-align: left;
   &:after {
