--- a/scss/application/views/_dashboard.scss
+++ b/scss/application/views/_dashboard.scss
@@ -235,7 +235,7 @@ Dashboard Sections
   .cardGrid {
     .cardGrid-videoCard {
       width: 260px;
-      background-color: $gray-base;
+      background-color: $gray-darker;
       color: #ffffff;
       &:after {
         font-family: 'amara';
