--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -9,7 +9,15 @@
   padding: 20px;
   @extend .clearfix;
   @include transition(1s);
+  h1, h2, h3, h4 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  dd {
+    word-wrap: break-word;
+  }
 }
+
 // Hide content on load. (FOUT versus FOIT)
 .wf-loading {
   nav, .content { opacity: 0; }
@@ -94,10 +102,6 @@
   }
 }
 
-.italic {
-  font-style: italic;
-}
-
 .muted, .faded {
   opacity: 0.5;
 }
@@ -178,6 +182,12 @@ img.pull-right {
 .text-capitalize { text-transform: capitalize !important; }
 .text-lowercase { text-transform: lowercase !important; }
 .text-uppercase { text-transform: uppercase !important; }
+
+.italic {
+  font-style: italic;
+}
+
+
 
 
 //play button
