--- a/scss/application/elements/_avatars.scss
+++ b/scss/application/elements/_avatars.scss
@@ -121,7 +121,7 @@
   -moz-osx-font-smoothing: grayscale;
 
   /* Default color palette */
-  color: $gray-base;
+  color: $gray-darker;
   background-color: #cccccc;
 
   // &:before {
@@ -156,7 +156,7 @@
       bottom: 0;
       width: 100%;
       height: 100%;
-      color: rgba($magenta, 0.8);
+      color: rgba($amaranth, 0.8);
       font-size: 20px;
       text-align: center;
       line-height: 30px;
