--- a/scss/application/global/_typography.scss
+++ b/scss/application/global/_typography.scss
@@ -29,7 +29,7 @@
 
 body {
   font-family: $font-family-sans-serif;
-  font-size: $font-size-base;
+  font-size: 14px;
   line-height: 1.42857143;
   color: $text-color;
   background-color: #fff;
