--- a/scss/application/views/_style_guide.scss
+++ b/scss/application/views/_style_guide.scss
@@ -97,17 +97,17 @@
         display: block;
         width: 100px;
         height: 50px;
-        &.icon-gray-base { background-color: $gray-base; }
+        &.icon-gray-base { background-color: $gray-darker; }
         &.icon-gray-darker { background-color: $gray-darker; }
         &.icon-gray-dark { background-color: $gray-dark; }
         &.icon-gray { background-color: $gray; }
         &.icon-gray-light { background-color: $gray-light; }
         &.icon-gray-lighter { background-color: $gray-lighter; }
         &.icon-teal { background-color: $teal; }
-        &.icon-magenta { background-color: $magenta; }
+        &.icon-amaranth { background-color: $amaranth; }
         &.icon-turquoise { background-color: $turquoise; }
         &.icon-plum { background-color: $plum; }
-        &.icon-lime-green { background-color: $lime-green; }
+        &.icon-lime-green { background-color: $lime; }
       }
     }
   }
